--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="transparent-heart-icon-love-icon.jpg">
-    <title>I LOVE YOU</title>
+    <title>For You</title>
   </head>
   <body>
     <div class="container">
